<resources>
    <string name="app_name">loc@larm</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">loc@larm</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="header_tasks">Tasks</string>

    <string name="menu_listview">List View</string>
    <string name="menu_mapview">Map View</string>
    <string name="menu_calendarview">Calendar View</string>
    <string name="menu_settings">Settings</string>
</resources>
