<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_list"
            android:icon="@drawable/ic_listview"
            android:title="@string/menu_listview" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_mapview"
            android:title="@string/menu_mapview" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_calendarview"
            android:title="@string/menu_calendarview" />
    </group>

    <item android:title="Options">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/menu_settings" />
        </menu>
    </item>

</menu>
